 =======================================================================
 ==CHANGES.txt
 =======================================================================

Current Development 0.5-SNAPSHOT

* GORA-189 Embrace all text-like parameters in generated Persistent subclasses by Compiler CharSequence (lewismc)

* GORA-361 AvroUtils.deepClonePersistent needs to flush BinaryEncoder (Gerhard Gossen via hsaputra)

* GORA-351 Multiple Slf4j logging implementations in parent pom.xml (lewismc)

* GORA-234 Javadoc and java annotations in gora-core base (abstract) classes needs to be corrected (tpalsulich via lewismc)

* GORA-349 Update Datastore specific mapping documentation with new default root element (MJJoyce) via lewismc

* GORA-241 Properly document WebServiceBackedDataStore Interface (Tyler Palsulich)

* GORA-347 Column attributes should be obtained using the column name and not the field name. (kaveh minooie, rmarroquin)

* GORA-348 - Using query for Avro Unions in Cassandra doesn't fully work (rmarroquin)

* GORA-XX Attemtpt to resolve javax.servlet classloading issue within gora-solr (lewismc)

* GORA-339 Upgrade solr dependencies to 4.8.1 (lewismc)

* GORA-341 - Switch gora-orm references to gora-otd in tutorial (MJJoyce via lewismc)

* GORA-332 fix record.vm template to generate deepCopyToReadOnlyBuffer method (drazzib aka Damien Raude-Morvan via hsaputra)

* GORA-331 Gora 0.4 compiler crash with "enum" type (drazzib aka Damien Raude-Morvan via hsaputra)

* GORA-336 MongoFilterUtil: missing ref link when creating new instance of factory (drazzib via lewismc)

* GORA-260 Make Solrj solr server impl configurable from within gora.properties (lewismc)

* GORA-199 MongoDB support for Gora ( Damien Raude-Morvan)

* GORA-333 Move README to markdown for better rendering on Github (lewismc)

* GORA-329 Update all SCM links in * pom.xml's (lewismc)

* GORA-325 Add Gora 0.4 Javadoc to site (lewismc)

Gora 0.4 release: (14/04/2014)
Release Report: http://s.apache.org/4lx
